...

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="(Example) CSE 110"
            android:id="@+id/profListTitle"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/profListView"
            android:textAlignment="center"
            android:layout_alignEnd="@+id/profListView"
...

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Professor"
            android:id="@+id/addNewProfBut"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#fdfd96"
            android:textColor="#000000" />

    </RelativeLayout>
...
