...
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UPLOAD"
            android:id="@+id/uploadButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".19"
            android:textSize="35sp"
            android:textColor="#fdfd96"
            android:background="#AAC5E2"
...
            android:onClick="openMyClasses"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="All Courses"
            android:id="@+id/allClassesButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".27"
            android:textSize="35sp"
            android:textColor="#fdfd96"
            android:background="#BED9F6"
            android:onClick="openAllClasses" />
...
