<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.etduongucsd.dopeshit.AllClasses"
    tools:showIn="@layout/activity_all_classes"
    android:background="#C8E3FF">

    <TextView
        android:id="@+id/allCoursesTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="All Courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="#fdfd96"
        android:background="#AAC5E2"
        >
    </TextView>




    <SearchView
        android:id="@+id/allClassesSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allCoursesTitle">
    </SearchView>

    <ExpandableListView
        android:id="@+id/allClassesExpList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/allClassesSearch">
    </ExpandableListView>

</RelativeLayout>
