<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.etduongucsd.dopeshit.ProfList"
    tools:showIn="@layout/activity_prof_list"
    android:background="#C8E3FF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="(Example) CSE 110"
        android:id="@+id/profListTitle"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:textColor="#fdfd96"
        android:background="#AAC5E2"
        android:textSize="30sp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profListView"
        android:layout_below="@+id/profListTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:divider="#72a6f9"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="false"
        android:footerDividersEnabled="true"
        />

</RelativeLayout>
