...
            android:textStyle="normal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Classes"
            android:id="@+id/myClassesButton"
            android:layout_weight=".30"
            android:textAlignment="center"
            android:textColor="#fcfc64"
            android:textSize="37sp"
            android:visibility="visible"
            android:elegantTextHeight="false"
...
